<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addTask"
            android:text="@string/addTask" />

        <Button
            android:id="@+id/fragmentActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignParentRight="true"
            android:onClick="openFragmentActivity"
            android:text="@string/withFragments" />
    </RelativeLayout>
    
    <TextView
            android:id="@+id/numberItems"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    <EditText
        android:id="@+id/newTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/taskText" />

    <ListView
        android:id="@+id/todoItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>